--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ DataFiles/*
 _Archive/*
 FileMergeOutput/Complete*
 *.Rhistory
+*.RData
+*.zipit
+*error_reporting.txt
+*.sublime-project
+RunExport.bat
+Scripts/Phos_Rankings_6666_6677.rmd
+Scripts/full_df_corr_analysis.R
+Scripts/Gather_and_zip_files.R
